# HyCAN

./: .gitignore  CMakeLists.txt  DAEMON.md  README.md  README_cn.md  conanfile.py
.github/: copilot-instructions.md
.github/workflow/: test.yml
.github/workflows/: release.yml  test.yml
cmake/: HyCANConfig.cmake.in  HyCANDaemon.cmake  HyCANExamples.cmake  HyCANFindCppIpc.cmake  HyCANFindTlExpected.cmake  HyCANFindlibnl3.cmake  HyCANInstall.cmake  HyCANPackaging.cmake  HyCANTests.cmake
cmake/packaging/debian/: postinst  prerm
cmake/packaging/rpm/: preuninstall.sh
daemon/: hycan_daemon.cpp
example/: example.cpp  real_can_example.cpp  send&callback.cpp
include/HyCAN/: Config.hpp
include/HyCAN/Daemon/: CANManager.hpp  Daemon.hpp  DaemonClass.hpp  InterfaceManager.hpp  Message.hpp  NetlinkManager.hpp  RequestProcessor.hpp  VCAN.hpp
include/HyCAN/Daemon/UnixSocket/: UnixSocket.hpp
include/HyCAN/Interface/: CANInterface.hpp  CanFrameConvertible.hpp  Daemon.hpp  Dispatcher.hpp  IPCManager.hpp  Interface.hpp  Netlink.hpp  NetlinkClient.hpp  Reaper.hpp  Sender.hpp  Socket.hpp  VCAN.hpp  VCANInterface.hpp
include/HyCAN/Util/: Error.hpp  SpinLock.hpp  UnixSocket.hpp
include/Interface/: CanFrameConvertible.hpp  Interface.hpp  Logger.hpp  Netlink.hpp  Reaper.hpp  Sender.hpp  Socket.hpp
include/hycan/Interface/: Interface.hpp  Reaper.hpp
scripts/: test_with_daemon.sh
src/: CMakeLists.txt  HyCAN.cppm  HyCAN.cxx  HyCAN.cxxm  Interface.cxx
src/Daemon/: CANManager.cpp  CMakeLists.txt  Daemon.cpp  InterfaceManager.cpp  NetlinkManager.cpp  RequestProcessor.cpp  VCAN.cpp  main.cpp
src/Daemon/UnixSocket/: CMakeLists.txt  UnixSocket.cpp
src/Daemon/systemed/: hycan-daemon.service.in
src/Device/: Device.cppm
src/Hardware/: Exception.cxxm
src/Hardware/Interface/: Interface.cxxm  VCAN.cxxm
src/Interface/: CANInterface.cpp  Daemon.cpp  Dispatcher.cpp  IPCManager.cpp  Interface.cpp  Interface.cppm  Interface.cxx  Interface.cxxm  Netlink.cpp  NetlinkClient.cpp  Reaper.cpp  Sender.cpp  Socket.cpp  VCAN.cpp  VCAN.cppm  VCAN.cxxm  VCANInterface.cpp  VirtualCANCreator.cxx  VirtualCANCreator.cxxm
src/Interface/Logger/: Logger.cppm
src/Interface/Netlink/: Netlink.cppm  _VCAN.cppm
src/Interface/Reaper/: Reaper.cppm  _Socket.cppm
src/Interface/Sender/: Sender.cppm
src/Interface/Socket/: Socket.cppm
src/Interface/Util/: CanFrameConvertible.cppm  InterfaceType.cppm
src/Util/: UnixSocket.cpp
systemd/: hycan-daemon.service.in
tests/: DaemonConcurrencyTest.cpp  DaemonConcurrencyWorker.cpp  DaemonTest.cpp  InterfaceStressTest.cpp  InterfaceTest.cpp  NetlinkTest.cpp
